Updating to cccf1753a169d62ed04b66a39ea3bf1a819aa7b3.

--- a/hmwk2/index.html
+++ b/hmwk2/index.html
@@ -40,7 +40,15 @@
 		
 	
 		
-		<li><a href="#2_github_pages_custom_domain" data-toggle="tab">Set-up your domain name </a></li>
+		<li><a href="#2_github_pages_custom_domain" data-toggle="tab">Set up your domain name </a></li>
+		
+	
+		
+		<li><a href="#3_finishing_off" data-toggle="tab">Finishing off </a></li>
+		
+	
+		
+		<li><a href="#4_extra_resources" data-toggle="tab">Extra resources </a></li>
 		
 	
 </ul>
@@ -56,6 +64,10 @@
 <p>Task:</p>
 </strong>
 <p>Read through <a href='http://gitimmersion.com/lab_01.html'>Git Immersion</a> exercises 1 to 11.</p>
+</div><hr /><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p><strong>Every day this week</strong> make a small change to your <code>first_site</code> folder, add, commit and push to GitHub. GitHub should show you as having a &#8216;5 day streak&#8217; on your homepage.</p>
 </div>
 	</div>
 
@@ -63,8 +75,10 @@
 	<div class="tab-pane " id="2_github_pages_custom_domain">
 	
 
-		<h2>Set-up your domain name</h2>
-		<p>There are two things you need to do to get your domain name working with your github pages site</p>
+		<h2>Set up your domain name</h2>
+		<p>The point of this exercise is to set up your domain name to point towards your new github pages site.</p>
+
+<p>There are two things you need to do to get your domain name working with your github pages site</p>
 
 <ol>
 <li>Tell your domain registrar (e.g 123-reg or godaddy) to point towards github</li>
@@ -111,6 +125,54 @@
 <pre><code>$ host yourdomain.com</code></pre>
 
 <p>at the command prompt (or <code>nslookup</code> on Windows).</p>
+	</div>
+
+	
+	<div class="tab-pane " id="3_finishing_off">
+	
+
+		<h2>Finishing off</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Finish off the <code>html2/exercise2.html</code> css task from class.</p>
+</div><hr /><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Finish off the <code>ruby1/advanced_hello.rb</code> and <code>ruby1/divide_cake.rb</code> exercises from class.</p>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="4_extra_resources">
+	
+
+		<h2>Extra resources</h2>
+		<h3 id='htmlcss'>HTML/CSS</h3>
+
+<p>This is not quite the end of what we&#8217;ll be doing with HTML and CSS, but we probably won&#8217;t spend a lot more time on it. From now on we will be using it as a tool, rather than studying it in its own right. If you want to know more about HTML and CSS here are a few good resources:</p>
+
+<ul>
+<li><a href='http://learn.shayhowe.com/html-css/'>HTML/CSS notes by Shay Howe</a>: this is an excellent and thorough set of HTML and CSS notes, by a guy who clearly knows his stuff. Well worth a look.</li>
+
+<li><a href='http://www.htmldog.com/guides/html/'>HTMLdog tutorials</a>: a good set of tutorials ranging from beginner to advanced.</li>
+
+<li><a href='http://www.codecademy.com/tracks/web'>Codecademy Web Track</a>: if you haven&#8217;t done it already!</li>
+
+<li><a href='http://coding.smashingmagazine.com/2009/08/17/taming-advanced-css-selectors/'>Taming advanced CSS selectors</a>: a detailed description of how browsers decide which CSS rules to apply.</li>
+</ul>
+
+<h3 id='ruby'>Ruby</h3>
+
+<p>We&#8217;ll be doing loads more Ruby over the course - it&#8217;ll be core to a lot of things we do, so it&#8217;s important to keep on top of it. If you need extra practice, or an alternative way of looking at things check out some of the resources below:</p>
+
+<ul>
+<li><a href='http://www.codecademy.com/tracks/ruby'>Codecademy Ruby Track</a>: we&#8217;ve currently covered the material from &#8220;Section 1: Introduction to Ruby&#8221;</li>
+
+<li><a href='http://tryruby.org'>Try Ruby</a>: you had a look at this last homework. You&#8217;re welcome to carry on through it.</li>
+
+<li><a href='http://it-ebooks.info/book/59/'>Progamming Ruby 1.9</a>: <em>the</em> Ruby 1.9 manual. Available for <strong>free download</strong> - get it quick. Probably a bit complicated as you&#8217;re starting out, but will be invaluable later in the course.</li>
+</ul>
 	</div>
 
 </div>
