--- a/ruby1/index.html
+++ b/ruby1/index.html
@@ -168,7 +168,7 @@ $ ruby hello.rb</code></pre>
 
 <p>It is often possible to write ruby in a way that reads a lot like English. Hopefully you found this with the above example - even though you&#8217;ve only just met ruby you were probably able to have a reasonably guess at what the above code did.</p>
 
-<p>Ruby is an incredibly powerful and flexible language. It is a modern language - created in the 1990s by Yukihiro Matsumoto (Matz). A large part of his design philosophy is centered around optimizing for developer happiness - making a language that is a pleasure to program in. If you haven&#8217;t already programmed in another language, you might not fully appreciate this, but - take it from me - ruby is awesome!</p>
+<p>Ruby is an incredibly powerful and flexible language. It is a modern language - created in the 1990s by Yukihiro Matsumoto (Matz). A large part of his design philosophy is centered around optimizing for developer happiness - making a language that is a pleasure to program in. If you haven&#8217;t already programmed in another language, you might not fully appreciate this, but - take it from someone who has - ruby is awesome!</p>
 	</div>
 
 	
