Updating to 74c0a694981ff4afc2f02cc1782524f46e81286f.

--- a/hmwk2/index.html
+++ b/hmwk2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>hmwk2</title>
+  <title>Session 2 Homework</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -29,7 +29,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>hmwk2 <small></small></h1>
+  <h1>Session 2 Homework <small></small></h1>
 </div>
 
 <div class="tabbable tabs-left">
