--- a/ruby6/index.html
+++ b/ruby6/index.html
@@ -62,7 +62,11 @@
 
 <p>student results subject, name, exam, result</p>
 
+<p>finding pictures with the flikr api</p>
+
 <p>events service - collecting responses, sending to caterers</p>
+
+<p>organising RAG blind date - take the first n matches https://github.com/gimite/google-drive-ruby</p>
 
 <p>mailmerge - mandrill?</p>
 
