--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,16 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_2__472013'>Session 2 - 4/7/2013</h3>
+
+<ul>
+<li><a href='/html2'>Web Fundamentals 2</a></li>
+
+<li><a href='/ruby1'>Into to Ruby 1</a></li>
+
+<li><a href='/hmwk2'>Homework</a></li>
+</ul>
+
 <h3 id='session_1__272013'>Session 1 - 2/7/2013</h3>
 
 <ul>
