Updating to 74c0a694981ff4afc2f02cc1782524f46e81286f.

--- a/hmwk2/index.html
+++ b/hmwk2/index.html
@@ -159,6 +159,8 @@
 
 <li><a href='http://www.codecademy.com/tracks/web'>Codecademy Web Track</a>: if you haven&#8217;t done it already!</li>
 
+<li><a href='http://net.tutsplus.com/tutorials/html-css-techniques/the-30-css-selectors-you-must-memorize/'>More about CSS selectors</a>: Pretty much everything you could ever want to know about CSS selectors (and more)</li>
+
 <li><a href='http://coding.smashingmagazine.com/2009/08/17/taming-advanced-css-selectors/'>Taming advanced CSS selectors</a>: a detailed description of how browsers decide which CSS rules to apply.</li>
 </ul>
 
