--- a/html1/index.html
+++ b/html1/index.html
@@ -553,7 +553,7 @@
 </ul>
 
 <h3 id='images'>Images</h3>
-<div class='highlight'><pre><code class='html'><span class='nt'>&lt;src</span> <span class='na'>alt=</span><span class='s'>&#39;my cat&#39;</span> <span class='na'>src=</span><span class='s'>&quot;my_cat.png&quot;</span><span class='nt'>&gt;</span>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;img</span> <span class='na'>alt=</span><span class='s'>&#39;my cat&#39;</span> <span class='na'>src=</span><span class='s'>&quot;my_cat.png&quot;</span><span class='nt'>&gt;</span>
 </code></pre></div>
 <ul>
 <li>The <code>alt</code> tag is for providing a description of your image. This is useful for partially sighted people using screen readers, or in case the image doesn&#8217;t load.</li>
