--- a/html2/index.html
+++ b/html2/index.html
@@ -207,7 +207,7 @@ Date:   Tue Jul 2 14:19:30 2013 +0100
 <li>
 <p>Commit your changes but forget the <code>-m</code>:</p>
 
-<pre><code> $ git commit -a</code></pre>
+<pre><code> $ git commit</code></pre>
 </li>
 
 <li>
