Updating to 74c0a694981ff4afc2f02cc1782524f46e81286f.

--- a/hmwk2/index.html
+++ b/hmwk2/index.html
@@ -90,11 +90,11 @@
 <li>
 <p>Also on the command line, in your <code>first_site</code> folder:</p>
 
-<p>$ git push</p>
-</li>
-</ol>
+<pre><code> $ git push</code></pre>
 
 <p>This will take the committed changes and put them up onto the repository on GitHub.</p>
+</li>
+</ol>
 	</div>
 
 	
@@ -102,7 +102,7 @@
 	
 
 		<h2>Set up your domain name</h2>
-		<p>The point of this exercise is to set up your domain name to point towards your new github pages site.</p>
+		<p>The point of this exercise is to set up your domain name to point towards your new GitHub pages site.</p>
 
 <p>As GitHub hosts many different pages at their IP address, it isn&#8217;t quite as simple as pointing your domain address towards that IP address. There are two things you need to do to get your domain name working with your GitHub pages site:</p>
 
