--- a/html3/index.html
+++ b/html3/index.html
@@ -140,6 +140,10 @@ git commit -m &quot;Description of changes&quot;</code></pre>
 <p>Check that changes you make to the CSS file are reflected in the browser.</p>
 </li>
 </ol>
+</div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Give a html page and two stylesheets in different locations. Get them to link them in. (Order matters.) Give an html page with css in the head. Get them to separate it.</p>
 </div>
 	</div>
 
